# SeaGOAT-on-Steroids

./: .pre-commit-config.yaml  CONTRIBUTING.md  config.yaml  pyproject.toml
seagoat_on_steroids/: assistant.py  chatgpt.py
