[tool.poetry]
name = "seagoat-on-steroids"
version = "0.1.0"
description = ""
authors = [
  "Daniel Kantor <git@daniel-kantor.com>",
  "Marco Lardera <larderamarco@hotmail.com>",
]
readme = "README.md"
packages = [{include = "seagoat_on_steroids"}]

[tool.poetry.scripts]
seagoat_on_steroids = "seagoat_on_steroids.assistant:main"
sga = "seagoat_on_steroids.assistant:main"

[tool.poetry.dependencies]
certifi = "2022.12.7"
python = ">=3.11,<3.13"
charset-normalizer = "3.0.1"
click = "8.1.3"
idna = "3.4"
markdown-it-py = "2.2.0"
mdurl = "0.1.2"
mypy-extensions = "1.0.0"
pathspec = "0.11.0"
platformdirs = "3.1.0"
prompt-toolkit = "3.0.38"
pygments = "2.15.1"
pyyaml = ">=6.0,<6.1"
requests = "2.31.0"
rich = "13.4.0"
tomli = "2.0.1"
typing-extensions = "4.6.2"
urllib3 = "1.26.14"
wcwidth = "0.2.6"
xdg-base-dirs = ">=6.0.0,<6.1.0"
seagoat = "^0.40.5"
halo = "^0.0.31"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["seagoat"]
exclude = ["**/node_modules", "**/__pycache__" ]
ignore = ["typings"]
reportMissingImports = false
reportMissingTypeStubs = false
pythonVersion = "3.11"
pythonPlatform = "Linux"
strict = []
executionEnvironments = [ { root = "src" } ]
